--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div class="container1">
             <div class="dice">
                 <p>Player-1</p>
-                <img src="/images/D-1.jpg" alt="D-1" class="D" id = "check1">
+                <img src="images/D-1.jpg" alt="D-1" class="D" id = "check1">
             </div>
             <div class="dice">
                 <p>Player-2</p>
-                <img src="/images/D-2.jpg" alt="D-2" class="D" id = "check2">
+                <img src="images/D-2.jpg" alt="D-2" class="D" id = "check2">
             </div>
         </div>
     </div>
